2002-06-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (local-clean): Also remove builddir-setup's symlinks.

2002-06-25  Juergen Reuter  <reuter@ipd.uka.de>

	* input/test/ambitus.ly, lily/ambitus-engraver.cc,
	lily/ambitus.cc, lily/include/ambitus.hh, ly/engraver-init.ly,
	scm/basic-properties.scm, scm/grob-description.scm,
	scm/grob-property-description.scm: added support for ambitus

2002-06-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/text-spanner.cc: add some props to interface (patch
	courtesy Chris J).

2002-06-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/text-spanner.cc (setup_pedal_bracket): Bugfix: only
	dereference valid Grob.

	* configure.in: Quoting fixes.

2002-06-24  Han-Wen  <hanwen@cs.uu.nl>

	* lily/grob-scheme.cc: new file

	* lily/break-substitution.cc: split up break substitution
	functionality, and make a special constant stack-space version for
	lists of grobs. This should fix the problems of lily in
	combination with pthreads/qthreads.

	* lily/grob.cc (mark_smob): bugfix: mark X parent too.

2002-06-23  Chris Jackson  <chris@fluffhouse.org.uk>

	* lily/text-spanner.cc (setup_pedal_bracket):
	* lily/piano-pedal-engraver.cc (create_bracket_grobs): 
	Fix the lengths of mixed-style piano pedal brackets.

2002-06-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (First steps): Add missing
	quotation.

	* Documentation/topdocs/INSTALL.texi (Top): Add some warnings
	about guile --with-threads.  Hopefully this issue can be resolved
	rsn, but maybe we should even add warnings for the standard Debian
	and Red Hat packages?

	* configure.in: Warn if guile is configured to use threads.  Maybe
	we should make this an error (ie, add to REQUIRED list?)

	* config.make.in (PACKAGE_NAME):
	(PACKAGE, package):  Don't hardcode.

	* VERSION (PACKAGE_NAME): Typo fix.

2002-06-23  Han-Wen  <hanwen@cs.uu.nl>

	* input/tutorial/brahms-*.ly: new tutorial files.
